@@ -113,6 +113,8 @@ production.
 * (bug 46513) Vector: Add the collapsibleTabs script from the Vector extension.
 * Added $wgRecentChangesFlags for defining new flags for RecentChanges and
   watchlists.
+* Revision deletion backend code is moved out of SpecialRevisiondelete, and
+  RevDel_Item gets a new method to support ApiRevisiondelete.
 
 === Bug fixes in 1.22 ===
 * Disable Special:PasswordReset when $wgEnableEmail is false. Previously one
@@ -192,6 +194,7 @@ production.
 * (bug 48201) action=parse&text=foo now assumes wikitext if no title is given,
   rather than using the content model of the page "API".
 * action=watch may now return errors.
+* (bug 23005) Added action=revisiondelete.
 
 === Languages updated in 1.22===
 
